# Herbal-Leaf-Classification

./: Herbal_Leaf_Classification.ipynb  README.md  app (1).py  app.py  pyproject.toml  requirements.txt
assets/images/: cover.avif
model/: class_names.json  cnn_leaf_model.keras  mobilenetv2_leaf_model.keras  resnet50_leaf_model.keras  vgg16_leaf_model.keras
models/: mobilenetv2.keras  resnet.keras  vgg16.keras
